<resources>
    <string name="app_name">Milo</string>
    <string name="login">Login</string>
    <string name="userName">UserName</string>
    <string name="passWord">Password</string>
    <string name="logout">Logout</string>
    <string name="vehicles">Vehicles List</string>
    <string name="logoutMessage">Are you sure want to logout?</string>
    <string name="add">Add Vehicle</string>
    <string name="vehicle_no">Vehicle Number</string>
    <string name="initial_reading">Initial Speedometer Reading(KM)</string>
    <string name="add_vehicle_no_miss">Enter Vehicle Number</string>
    <string name="registration">Add Profile</string>
    <string name="fullName">Name</string>
    <string name="email">Email-ID</string>
    <string name="phoneno">Mobile No</string>
    <string name="confPassword">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="no_vehicle_added">New Vehicle not Added Yet!!</string>
    <string name="no_Mileage_added">New Trip not Added Yet!!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_action">Select Action</string>
    <string name="are_you_sure_want_to_delete">All the Vehicle Information will be deleted!\n\n Are you sure do you want to delete?</string>
    <string name="addReading">Add Trip</string>
    <string name="addInitialReading">Add Initial Speedometer Reading(KM)</string>
    <string name="last_reading">Add Final Speedometer Reading(KM)</string>
    <string name="latest_reading">Latest Reading</string>
    <string name="last_reading_km">Previous Reading (KM)</string>
    <string name="latest_reading_km">Latest Reading (KM)</string>
    <string name="present_reading">Present Reading</string>
    <string name="present_reading_km">Present Reading (KM)</string>
    <string name="Fuel_quantity">Fuel Quantity(Liters)</string>
    <string name="previous_reading">Previous Reading</string>
    <string name="amountPaid">Amount Paid</string>
    <string name="Fuel_price">Fuel Price</string>
    <string name="Fuel">Fuel</string>
    <string name="amount">Amount</string>
    <string name="transactionType">Transaction Type</string>
    <string name="reading">Reading</string>
    <string name="reading_before">Reading before</string>
    <string name="Mileage_received">Mileage received</string>
    <string name="Mileage">Mileage</string>
    <string name="log">Trip</string>
    <string name="km_lt">KM/ltr</string>
    <string name="km">KM</string>
    <string name="mileageSuggestions">Mileage Suggestions</string>
    <string name="bestMileageVehicles">Best Mileage Vehicles</string>
    <string name="bestMileageBikes">Best Mileage Bikes</string>
    <string name="bestMileageCars">Best Mileage Cars</string>
    <string name="graph_view">Graph View</string>
    <string name="calculate">Calculate</string>
    <string name="calculateMileage">Calculate Mileage</string>
    <string name="mileageReceived">Mileage received</string>
    <string name="graph_message">Each bar represents Mileage received for each trip , maximum value added is 100.</string>
    <string name="remember">Remember</string>
    <string name="info_message">This app will store the data in device database so user not able to access the data from any of other device and also uninstalling the application may cause to remove entire data.\n \n Thank you.</string>

    //Validation Messages
    <string name="UsernameOrPasswordMissing">Username or Password not proper</string>
    <string name="UsernameOrPasswordNotCorrect">Username or Password not correct</string>
    <string name="enterName">Enter Name</string>
    <string name="enterValidEmail">Enter Valid Email</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterPhone">Enter Phone</string>
    <string name="enterConfPassword">Enter Confirm Password</string>
    <string name="passwordNotMatch">Passwords not matching</string>
    <string name="userInsertSuccess">Profile added successfully</string>
    <string name="userInsertFailed">User registration failed</string>
    <string name="vehicleInsertSuccess">Vehicle added successfully</string>
    <string name="vehicleUpdateSuccess">Vehicle updated successfully</string>
    <string name="vehicleInsertFailed">Vehicle adding failed</string>
    <string name="enter_initial_reading">Enter initial reading</string>
    <string name="enter_current_reading">Enter present reading</string>
    <string name="enter_previous_reading">Enter previous reading</string>
    <string name="enter_Fuel_quantity">Enter Fuel quantity</string>
    <string name="enter_amount_paid">Enter amount paid</string>
    <string name="enter_Fuel_price">Enter Fuel price</string>
    <string name="enter_valid_readings">Reading not proper</string>
    <string name="failedToAdd">Failed to add</string>
    <string name="successfullyAdded">Successfully added</string>
    <string name="successfullyUpdated">Successfully updated</string>
    <string name="vehicle_added_already">Vehicle added already</string>
    <string name="minimumOneReadingRequired">Minimum one reading required to see in Graph view</string>
    <string name="valuesNotProper">Invalid values added</string>
    <string name="tripsAddedAlready">Trips added to this vehicle so we can not edit the vehicle name</string>

    //Url's
    <string name="best_bikes_url">https://www.bikewale.com/best-mileage-bikes-in-india/</string>
    <string name="best_cars_url">https://www.carblogindia.com/best-mileage-cars-in-india/</string>

    //Banners
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_app_id">ca-app-pub-3331469321239129~6410423231</string>
</resources>
