<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/bestMileageBikes"
        android:title="@string/bestMileageBikes"
        app:showAsAction="never" />

    <item
        android:id="@+id/bestMileageCars"
        android:title="@string/bestMileageCars"
        app:showAsAction="never" />

    <item
        android:id="@+id/mileageSuggestions"
        android:title="@string/mileageSuggestions"
        app:showAsAction="never" />

    <item
        android:visible="false"
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>